--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["asynchronous", "hardware-support"]
 
 [dependencies]
 mio = "0.6"
-serialport = "2.3"
+serialport = {git = "https://gitlab.com/susurrus/serialport-rs" }
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.10"
